fixed bug DOCS-1677 : Discard message popup opens behind mail compose dialog

--- a/ui/apps/themes/components/dialog.less
+++ b/ui/apps/themes/components/dialog.less
@@ -15,6 +15,7 @@
 .io-ox-dialog-wrapper {
     height: 100%;
     width: 100%;
+    z-index: 14;
 
     .modal-title {
         font-size: 18px;
